# assent-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/assent/: assent.h
src/lib/: CMakeLists.txt  assent.c
src/test/: CMakeLists.txt  test.c
